--- a/ui/style.css
+++ b/ui/style.css
@@ -2,3 +2,31 @@
   stroke-width: 2px;
   fill: none;
 }
+
+table {
+  margin: 20px 0;
+  font-family: sans-serif;
+  font-size: 0.9rem;
+  color: #384047;
+}
+
+thead th {
+  font-weight: 400;
+  background: #8a97a0;
+  color: #fff;
+}
+
+tr {
+  background: #f4f7f8;
+  border-bottom: 1px solid #fff;
+}
+
+tr:nth-child(even) {
+  background: #e8eeef;
+}
+
+th, td {
+  text-align: left;
+  font-weight: 300;
+  padding: 5px;
+}
