--- a/ui/style.css
+++ b/ui/style.css
@@ -8,9 +8,11 @@ table {
   font-family: sans-serif;
   font-size: 0.9rem;
   color: #384047;
+  border: 1px solid #8a97a0;
+  border-collapse: collapse;
 }
 
-thead th {
+thead th, thead td, thead tr {
   font-weight: 400;
   background: #8a97a0;
   color: #fff;
@@ -18,7 +20,6 @@ thead th {
 
 tr {
   background: #f4f7f8;
-  border-bottom: 1px solid #fff;
 }
 
 tr:nth-child(even) {
@@ -28,10 +29,10 @@ tr:nth-child(even) {
 th, td {
   text-align: left;
   font-weight: 300;
-  padding: 5px;
+  padding: 4px 10px;
   min-width: 100px;
 }
 
-td:not(:first-of-type)  {
+td:not(:first-of-type), thead td:first-of-type  {
   text-align: right;
 }
