--- a/ui/style.css
+++ b/ui/style.css
@@ -36,3 +36,8 @@ th, td {
 td:not(:first-of-type), thead td:first-of-type  {
   text-align: right;
 }
+
+td:first-child, th:first-child {
+  font-weight: 600;
+  border-right: 2px solid #8a97a0;;
+}
