--- a/ui/src/styles/shared/shared.css
+++ b/ui/src/styles/shared/shared.css
@@ -1,7 +1,7 @@
 body {
   --light-background: #fff;
   --medium-background: #f2f3f5;
-  --dark-background: #8a97a0;
+  --dark-background: #374C60;
   --dark-text-color: #384047;
   --light-text-color: #fff;
   --component-border-radius: 5px;
@@ -18,5 +18,5 @@ body {
   box-shadow: var(--component-box-shadow);
   border-radius: var(--component-border-radius);
   padding: var(--component-padding);
-  margin: 10px;
+  margin: 20px;
 }
